bugfix: Underlying text is hidden by the Random Index dropdown for small screens, added small scss file

--- a/scss/pages/_trade.scss
+++ b/scss/pages/_trade.scss
@@ -137,8 +137,3 @@
 		}
 	}
 }
-@media screen and (max-width: 400px) {
-	.trade .contract-price .price {
-		display: inline-block;
-	}
-}
